--- a/main.html
+++ b/main.html
@@ -10,11 +10,14 @@
 	<!-- the entire body must be written by student -->
 	<table border="1">
 		  <caption>Student Details</caption>
+		<thead>
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
 			<th>BRANCH</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>Shaw</td>
 			<td>20</td>
@@ -24,6 +27,8 @@
 		  <td>Adil</td>
 		  <td>21</td>
 		  <td>ECE</td>
+	  </tr>
+		</tbody>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
