--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1">
+	<table border="1" bgcolor="yellow" >
 		  <caption>Student Details</caption>
 		<thead>
 		<tr>
