--- a/main.html
+++ b/main.html
@@ -11,22 +11,22 @@
 	<table border="1" bgcolor="yellow" >
 		  <caption>Student Details</caption>
 		<thead>
-		<tr>
-			<th>NAME</th>
-			<th>AGE</th>
-			<th>BRANCH</th>
+		<tr border="1">
+			<th border="1">NAME</th>
+			<th border="1">AGE</th>
+			<th border="1">BRANCH</th>
 		</tr>
 		</thead>
 		<tbody>
-		<tr>
-			<td>Shaw</td>
-			<td>20</td>
-			<td>CSE</td>
+		<tr border="1">
+			<td border="1">Shaw</td>
+			<td border="1">20</td>
+			<td border="1">CSE</td>
 		</tr>
-	  <tr>
-		  <td>Adil</td>
-		  <td>21</td>
-		  <td>ECE</td>
+	  <tr border="1">
+		  <td border="1">Adil</td>
+		  <td border="1">21</td>
+		  <td border="1">ECE</td>
 	  </tr>
 		</tbody>
 	</table>
